# Terminal-Chat-Project

./: README.md
Server/: CMakeLists.txt
Server/include/: crypt.hpp  server_class.hpp
Server/src/: crypt.cpp  server.cpp  server_class.cpp
client_class/: CMakeLists.txt
client_class/include/: client_class.hpp  crypt.hpp
client_class/src/: client_class.cpp  crypt.cpp  main.cpp
